fix slide in animation overflow

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
     - New About Me Photo
     - blurbs about services / simplify
     - css animation circle/ slide/ wipe/ overlay like google buds
-    - fix slide in animation
     - more about me? Phoenix
     - add in real resume file
     -->
@@ -183,7 +182,7 @@
   
     <div class="col-lg-6 container">
       <div class="">
-        <h2 class="display-4 slideinright show-on-scroll" id="about-header">About Me</h2>
+        <h2 class="display-4 slideinleft show-on-scroll" id="about-header">About Me</h2>
           <p class="content">I have always had a passion for technology. Throughout my life, I have been constantly tinkering with, building, and fixing electronics. I studied Computer Science at the University of Central Florida to pursue my passion for technology. For the last year I have been providing tech support for Verizon Wireless customers. I obtained my A+ Certification from CompTIA and I am continuously furthering my education. I have studied network tools and infrastructure, web development, and cybersecurity. I actually built this website from the ground up using HTML, CSS, and Javascript. Check out my portfolio to see other projects that I have been working on lately!
           </p>
           <p class="content">While studying at the university, I encountered many new people and ideas and was introduced to a new passion: yoga and movement arts. Shortly thereafter I witnessed my first fire dancing performance, and I was immediately mesmerized. After years of practice, I started my first small business: Phoenix Fire & Performance Art, and I became a certified Yoga Instructor. At Phoenix Fire, I led a troupe of performers who specialized in fire dancing, acrobatics, juggling, LED light shows, fire eating, and fire breathing! As my business developed, I realized that myself and many others had a need for higher quality tools to be used for training and performing. This is what led me to start my second business: Liquid Flow Props. At Liquid Flow I designed, manufactured, sold, and repaired high quality fire performance tools. After 6 insightful years, I shut down Phoenix Fire and Liquid Flow in order to pursue my career in IT. Though that may have been the end of a chapter, a Phoenix never really dies does it? Below, you can check out my websites for both of these startups to learn more. 	
@@ -208,7 +207,7 @@
 
   <!--Services Section-->
   <div class="jumbotron" id="services">
-      <h1 class="display-4 slideinleft show-on-scroll">Services</h1>
+      <h1 class="display-4 slideinright show-on-scroll">Services</h1>
       <h4 class="fade-in show-on-scroll">Here are some of the services I offer</h4>
   </div>
   <!--Service 1-->
@@ -306,7 +305,7 @@
   </a>
 </div>
   <!--Projects Section-->
-  <div id="portfolio"></div>
+  <div id=""></div>
   <br>
   <div id="portfolio" class="jumbotron">
     <h1 class="display-4 slideinright show-on-scroll">Portfolio</h1>
@@ -331,20 +330,20 @@
 
 
     <div class="col-lg-6 my-2 pb-5">
-      <a class="btn btn-primary btn-lg p-2 mb-3" href="#about" role="button">Phoenix Fire</a>
+      <a class="btn btn-primary btn-lg p-2 mb-3 mt-4" href="#about" role="button">Phoenix Fire</a>
       <a href="https://liquidflowprops.wixsite.com/phoenix-fire" target="_blank" draggable="false">
         <img src="img/Phoenix Site.png" alt="phoenix fire" class="project1 pb-4" draggable="false">
       </a>
     </div>
 
       <div class="col-lg-6 my-2">
-        <a class="btn btn-primary btn-lg p-2 mb-3" href="#about" role="button">Liquid Flow</a>
+        <a class="btn btn-primary btn-lg p-2 mb-3 mt-4" href="#about" role="button">Liquid Flow</a>
         <a href="https://liquidflowprops.wixsite.com/liquidflowprops" target="_blank" draggable="false">
           <img src="img/LF Site.png" alt="Liquid flow" class="project1 pb-4 resize-img" draggable="false">
       </a>
     </div>
 
-    <div class="col-lg-6 my-2 mx-auto pb-5">
+    <div class="col-lg-6 my-5 mx-auto pb-5">
       <a class="btn btn-primary btn-lg p-2 mt-5" href="#about" role="button">Portfolio Website</a>
       <a href="https://github.com/techx-guy/Portfolio-Site-Project" target="_blank" draggable="false">
         <img src="img/My Site Splash.png" alt="github project 2" class="project1 pb-2" draggable="false">
