remove padding navbar

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <body ontouchstart=””>
     <header></header>
     <div class="hero" id="home">
-      <nav class="navbar navbar-expand-lg navbar-dark py-0 fixed-top" id="navbar">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="navbar">
         <div class="container">
           <a class="navbar-brand" href="#home">
             <img src="img/penrose-outline-white.png" width="60" height="60" class="d-inline-block align-middle logo1" alt="logo">
