revert to old splash image

--- a/index.html
+++ b/index.html
@@ -315,14 +315,14 @@
   <div class="container">
     <div class="row row-projects bg-color text-center">
       <div class="col-lg-6 my-2 pb-3">
-        <a class="btn btn-primary btn-lg p-2" href="#about" role="button">Fire Scripts CLI</a>
+        <a class="btn btn-primary btn-lg p-2" href="https://github.com/techx-guy/Fire-Scripts-CLI" target="_blank" role="button">Fire Scripts CLI</a>
         <a href="https://github.com/techx-guy/Fire-Scripts-CLI" target="_blank" draggable="false">
           <img src="img/Fire Scripts CLI Splash.png" alt="github project 1" class="project1" draggable="false">
         </a>
     </div>
   
     <div class="col-lg-6 my-2 pb-3">
-      <a class="btn btn-primary btn-lg p-2" href="#about" role="button">Fire Scripts GUI</a>
+      <a class="btn btn-primary btn-lg p-2" href="https://github.com/techx-guy/Fire-Scripts-GUI" target="_blank" role="button">Fire Scripts GUI</a>
       <a href="https://github.com/techx-guy/Fire-Scripts-GUI" target="_blank" draggable="false">
         <img src="img/Fire Scripts GUI Splash.png" alt="github project 3" class="project1" draggable="false">
       </a>
@@ -330,21 +330,21 @@
 
 
     <div class="col-lg-6 my-2 pb-5">
-      <a class="btn btn-primary btn-lg p-2 mb-3 mt-4" href="#about" role="button">Phoenix Fire</a>
+      <a class="btn btn-primary btn-lg p-2 mb-3 mt-4" href="https://liquidflowprops.wixsite.com/phoenix-fire" target="_blank" role="button">Phoenix Fire</a>
       <a href="https://liquidflowprops.wixsite.com/phoenix-fire" target="_blank" draggable="false">
         <img src="img/Phoenix Site.png" alt="phoenix fire" class="project1 pb-4" draggable="false">
       </a>
     </div>
 
       <div class="col-lg-6 my-2">
-        <a class="btn btn-primary btn-lg p-2 mb-3 mt-4" href="#about" role="button">Liquid Flow</a>
+        <a class="btn btn-primary btn-lg p-2 mb-3 mt-4" href="https://liquidflowprops.wixsite.com/liquidflowprops" target="_blank" role="button">Liquid Flow</a>
         <a href="https://liquidflowprops.wixsite.com/liquidflowprops" target="_blank" draggable="false">
           <img src="img/LF Site.png" alt="Liquid flow" class="project1 pb-4 resize-img" draggable="false">
       </a>
     </div>
 
     <div class="col-lg-6 my-5 mx-auto pb-5">
-      <a class="btn btn-primary btn-lg p-2 mt-5" href="#about" role="button">Portfolio Website</a>
+      <a class="btn btn-primary btn-lg p-2 mt-5" href="https://github.com/techx-guy/Portfolio-Site-Project" target="_blank" role="button">Portfolio Website</a>
       <a href="https://github.com/techx-guy/Portfolio-Site-Project" target="_blank" draggable="false">
         <img src="img/My Site Splash.png" alt="github project 2" class="project1 pb-2" draggable="false">
       </a>
