--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <meta property="og:image" content="img/og-image.png" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
-    <title>Tech X Guy • High Tech • Low stress</title>
+    <title>Tech X Guy • Web Development • Tech Support • Solutions • Repairs  </title>
     <!--TODO
     - New About Me Photo
     - blurbs about services / simplify
