--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- Fav icon -->
-    <link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
+    <link rel="shortcut icon" href="img/favicon_io/apple-touch-icon-240x240.png" />
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png" /> -->
     <link rel="apple-touch-icon" sizes="240x240" href="img/favicon_io/apple-touch-icon-240x240.png" />
-    <link rel="icon" sizes="240x240" href="img/favicon_io/apple-touch-icon-240x240.png" />
+    <link rel="icon" type="image/png" sizes="240x240" href="img/favicon_io/apple-touch-icon-240x240.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png" />
     <link rel="manifest" href="img/favicon_io/site.webmanifest">
@@ -53,7 +53,7 @@
     <meta property="og:image" content="img/og-image.png" />
     <meta property="og:image:width" content="2200" />
     <meta property="og:image:height" content="840" />
-    <title>Tech X Guy • Web Development • Tech Support • Repairs  </title>
+    <title>Tech X Guy • Tech Support • Web Development • Repairs  </title>
     <!--TODO
     - New About Me Photo
     - blurbs about services / simplify
