update dark switch and others

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     - blurbs about services / simplify
     - css animation circle/ slide/ wipe/ overlay like google buds
     - more about me? Phoenix
+    - landscape phone hello and full width
     - add in real resume file
     -->
   </head>
@@ -75,7 +76,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto text-block">
               <li class="nav-item active">
                 <a class="nav-link" href="#home">Home <span class="sr-only">current</span></a>
               </li>
@@ -100,6 +101,7 @@
                   <label class="custom-control-label theme-switch" for="darkSwitch">Dark Mode</label>
                 </div>
               </li>
+              <li class="blank-space"></li>
             </ul>
           </div>
         </div>
