move navbar up on landscape phones

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   <body ontouchstart=””>
     <header></header>
     <div class="hero" id="home">
+      <div class="navbar-div">
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="navbar">
         <div class="container">
           <a class="navbar-brand" href="#home">
@@ -106,6 +107,7 @@
           </div>
         </div>
       </nav>
+    </div>
       <div class="jumbotron hero_content">
         <div class="container">
           <h1 class="display-4 hello fade-in show-on-scroll">Hi, I'm Anthony</h1>
