--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
   <script src="js/dark-mode-switch.min.js"></script>
   <!--Autohide navbar-->
   <script src="js/autohide-clean.min.js"></script>
-  <script src="js/mobile-navbar-adjuster.js"></script>
+  <!-- <script src="js/mobile-navbar-adjuster.js"></script> -->
   </body>
   <footer>
     <div class="footer-text">Face Photos by <a href="https://generated.photos/">Generated Photos</a></div>
