--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
   <!--darkmode script-->
   <script src="js/dark-mode-switch.min.js"></script>
   <!--Autohide navbar-->
-  <script src="js/autohide-clean.min.js"></script>
+  <script src="js/autohide-clean.js"></script>
   <!-- <script src="js/mobile-navbar-adjuster.js"></script> -->
   </body>
   <footer>
