fix initial load navbar no blur

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <body ontouchstart="">
     <header></header>
     <div class="hero" id="home">
-      <nav class="navbar navbar-expand-xl navbar-dark fixed-top" id="navbar">
+      <nav class="navbar navbar-expand-xl navbar-dark fixed-top navbar-blur" id="navbar">
         <div class="container">
           <a class="navbar-brand" href="#home">
             <img src="img/penrose-outline-white.png" width="60" height="60" class="d-inline-block align-middle logo1" alt="logo">
@@ -63,7 +63,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto text-block">
               <li class="nav-item active">
-                <a class="nav-link" href="#home">Home <span class="sr-only">current</span></a>
+                <a class="nav-link" href="#home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
