navbar auto scroll ++

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto text-block">
+            <ul class="navbar-nav ml-auto text-block" id="navbar-nav">
               <li class="nav-item active">
                 <a class="nav-link" href="#home">Home</a>
               </li>
@@ -429,13 +429,13 @@
   <br>
 <!--Smooth Scroll ALl Browsers jQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="js/smooth-scroll.min.js"></script>
+  <script src="js/smooth-scroll.js"></script>
   <!--Animations on scroll-->
-  <script src="js/show-on-scroll.js"></script>
+  <script src="js/show-on-scroll.min.js"></script>
   <!--darkmode script-->
   <script src="js/dark-mode-switch.min.js"></script>
   <!--Autohide navbar-->
-  <script src="js/autohide-clean.js"></script>
+  <script src="js/autohide-clean.min.js"></script>
   <!-- <script src="js/mobile-navbar-adjuster.js"></script> -->
   </body>
   <footer>
